# speedometer

./: .gitignore  CMakeLists.txt  README.md
desktop/client/: main.cpp
desktop/client/include/: canvas.h  comservice.h  tcpservice.h  uartservice.h  window.h
desktop/client/src/: canvas.cpp  comservice.cpp  tcpservice.cpp  uartservice.cpp  window.cpp
desktop/server/: main.cpp
desktop/server/include/: comservice.h  tcpservice.h  uartservice.h  window.h
desktop/server/src/: comservice.cpp  tcpservice.cpp  uartservice.cpp  window.cpp
esp32/client/src/: main.c
esp32/server/src/: main.c
shared/: setting.h
